--- a/admin/example.html
+++ b/admin/example.html
@@ -1,12 +1,85 @@
-<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
-  <title>GIMP - The GNU Image Manipulation Program</title>
-  <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<?xml version="1.0" encoding="iso-8859-1"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!-- $Id$ -->
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 
-  <!--#include virtual="/includes/wgo-page-init.xhtml" -->
-    <!--#include virtual="/includes/news.inc" -->
-    <a href="http://validator.w3.org/check/referer">Validate XHTML</a>
-    <a href="http://jigsaw.w3.org/css-validator/check/referer">Validate CSS</a>
+<title>www.gimp.org - Site Administration</title>
+<link href="/style/extended.css" media="screen" rel="stylesheet" title="www.gimp.org - Administration" type="text/css" />
+  <!-- $Id$ -->
+<!-- $Id$ -->
+<!-- placeholder for page layout definitions -->
 
-  <!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!-- $Id$ -->
+<!-- element style information -->
+<link rel="stylesheet" type="text/css" href="/style/default.css" />
 
-<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
+<!-- placeholder for site navigation -->
+
+
+  <!-- $Id$ -->
+</head>
+<body>
+<div id="titlebar"><a href="http://www.gimp.org"><img id="titlebarleft" src="/images/thegimp.png" alt=""/></a><img id="titlebarright" src="/images/wilberright.png" alt=""/></div>
+    <table id="layout">
+      <tr>
+        <td id="menu">
+          <div>www.gimp.org</div>
+            <a style="padding-left: 0.5em" href="/index.html">Home</a><br />
+
+          <div style="padding-top: 0.5em;">Administration</div>
+            <a style="padding-left: 0.5em" href="/admin/index.html">Main</a><br />
+            <a style="padding-left: 0.5em" href="/admin/howto.html"> HOWTO</a><br />
+
+          <div style="padding-top: 0.5em;">News</div>
+            <a style="padding-left: 0.5em" href="/admin/news/news-index.cgi?news-pending">Pending News</a><br />
+            <a style="padding-left: 0.5em" href="/admin/news/news-index.cgi?news-current">Current News</a><br />
+            <a style="padding-left: 0.5em" href="/admin/news/news-index.cgi?news-archive">Archived News</a><br />
+            <a style="padding-left: 0.5em" href="/admin/news/howto-news.html">HOWTO</a><br />
+
+          <div style="padding-top: 0.5em;">Splash Contest</div>
+            <a style="padding-left: 0.5em" href="/admin/contest/gallery-edit.cgi">Edit Gallery</a><br />
+
+          <div style="padding-top: 0.5em;">Developer</div>
+            <a style="padding-left: 0.5em" href="/admin/develop/changelogs.cgi">ChangeLogs</a><br />
+        </td>
+     <td id="main">
+
+  <h1>gimp.org Site Administration</h1>
+  <p>
+    Welcome to the www.gimp.org web administration.  With this, you will
+    be able to do a variety of things.
+  </p>
+  <p>
+    Currently, you can create, approve, and archive news items, and edit
+    and delete entries from the <a href="/contest">image contest</a>.
+  </p>
+<!-- $Id$ -->
+        </td>        
+      </tr>
+    </table>
+
+    <div id="linkbar">
+      <a href="/admin/todo.xhtml">Web Site TODO</a> |
+      <a href="/admin/documentation">Web Site Developer Documentation</a> | 
+    </div>
+    <div>
+      <span id="footerleft">
+        &copy; 2001-2002 <a href="/team.html">The GIMP Team</a>
+      </span>
+      <span id="footerright">
+        <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
+      </span>
+    </div>
+
+<!-- $Id$ -->
+<div style="clear: both; margin: 0; width: 100%; "></div>
+<div>
+  <a style="clear: both; font-size: xx-small;" href="http://validator.w3.org/check/referer">Validate XHTML</a>
+</div>
+  </body>
+</html>
+
+
+
