Some code cleanup and tightening.

--- a/programmatic/admin/howto.html
+++ b/programmatic/admin/howto.html
@@ -2,7 +2,7 @@
 <title>GIMP - The GNU Image Manipulation Program</title>
 <link rel="stylesheet" title="Administration HOWTO" href="/admin/wgo-admin.css" type="text/css" media="screen" />
   <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
-  <!--#include virtual="/includes/wgo-page-init.xhtml" -->
+  <!--#include virtual="/includes/wgo-admin-init.xhtml" -->
 
   <h1 class="heading">gimp.org Administration HOWTO</h1>
   <h2 class="subtitle">http.conf</h2>
@@ -29,5 +29,5 @@ NameVirtualHost 63.199.184.245:8082
 &lt;/VirtualHost&gt;
 </pre>
 </fieldset>
-<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-admin-fini.xhtml" -->
 <!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
