--- a/admin/todo.xhtml
+++ b/admin/todo.xhtml
@@ -490,8 +490,8 @@ Guidelines:
         </p>
       </td></tr>
     <tr>
-      <td></td>
-      <td></td>
+      <td>done</td>
+      <td>Branko</td>
       <td>windows/</td>
       <td>
         I dunno. I don't want to even look at this now.  Maybe i can
