Modified ChangeLog. Fixed broken link reported in bug #118755. Fixed
Modified ChangeLog.
Fixed broken link reported in bug #118755.
Fixed broken link to ancient history reported in bug #118755 and from mails.
Created this file and linked the dev-docs to http://developer.gimp.org/
Removed this file.

--- a/about/splash-1.1.html
+++ b/about/splash-1.1.html
@@ -145,7 +145,7 @@
   artist:  tigert</p>
 </td><td>
   <h2>tarball: 1.1.25</h2>
-  <a href="gimp_splash.1.5"><img src="gimp_splash.1.5-t.png" width="120" height="150" alt="1.5"/></a>
+  <a href="gimp_splash.1.5.png"><img src="gimp_splash.1.5-t.png" width="120" height="150" alt="1.5"/></a>
   <p>CVS: 1.5<br />
   artist:  tigert, Sven</p>
 </td></tr>
