Modified ChangeLog. Fixed a broken link to the GIMP for Windows section
Modified ChangeLog.
Fixed a broken link to the GIMP for Windows section that missed before.

--- a/downloads/install_help.html
+++ b/downloads/install_help.html
@@ -6,7 +6,7 @@
 <h1>Install help</h1>
 <p>
   <b>Note for Windows Users:</b> This page is for installation help for the Unix version of GIMP. 
-  If you need help with the installation of Windows GIMP, see the <a href="">GIMP for Windows</a> page.
+  If you need help with the installation of Windows GIMP, see the <a href="/windows/">GIMP for Windows</a> page.
 </p>
 <ul>
   <li><a href="#requirements">Requirements</a></li>
