Modified ChangeLog. Fixed link to INSTALL. Changed the size for the
Modified ChangeLog.
Fixed link to INSTALL.
Changed the size for the images. Branko made the bug report and also provided the information about what needed to be changed. This closes: #119211
Add this file.

--- a/downloads/install_help.html
+++ b/downloads/install_help.html
@@ -80,7 +80,7 @@
   So, here are a few common problems and some solutions
 </p>
 <p>
-  For some more specific info, you may want to read the <a href="">INSTALL</a> file from the main GIMP distribution.
+  For some more specific info, you may want to read the <a href="INSTALL">INSTALL</a> file from the main GIMP distribution.
 </p>
 
 <a name="add-pkg"><h1>Other Packages</h1></a>
