--- a/develop/index.html
+++ b/develop/index.html
@@ -5,9 +5,18 @@
 
 <h1>Development</h1>
 <h2>People</h2>
+
 <p class="images">
   <img src="people.jpg" width="494" height="394" alt="people"/>
 </p>
+
+<p class="images">
+  <img src="gimpcon2003-heading.png" width="450" height="60" alt="[Pixelpushers @ GIMPCON 2003]"/>
+  <br/><img src="gimpcon2003-portrait.jpeg" width="450" height="230" alt="[Group portrait of GIMP developers, contributors and users]"/>
+  <br/><img src="gimpcon2003-legend.png" width="450" height="60" alt="[Top row: Jimmac Sam Hans Maurits Daniel Pippin Marc Nomis Drc Sven Raphael Roman; bottom row: Brix BBC Bolsh Mitch Montana Calvin]"/>
+</p>
+
+
 <h2>Important GIMP URLs</h2>
 <!--#include virtual="/includes/urls_important.inc" -->
 <h2>Important GIMP Development URLs</h2>
