--- a/develop/index.html
+++ b/develop/index.html
@@ -10,11 +10,11 @@
   <img src="people.jpg" width="494" height="394" alt="people"/>
 </p>
 
-<p class="images">
+<p class="imageslices">
   <img src="gimpcon2003-heading.png" width="450" height="60" alt="[Pixelpushers @ 
-  GIMPCON 2003]"/><br/><img src="gimpcon2003-portrait.jpeg" width="450" 
+  GIMPCON 2003]"/><img src="gimpcon2003-portrait.jpeg" width="450" 
   height="230" alt="[Group portrait of GIMP developers, contributors and 
-  users]"/><br/><img src="gimpcon2003-legend.png" width="450" height="60" 
+  users]"/><img src="gimpcon2003-legend.png" width="450" height="60" 
   alt="[Top row: Jimmac Sam Hans Maurits Daniel Pippin Marc Nomis Drc Sven Raphael 
   Roman; bottom row: Brix BBC Bolsh Mitch Montana Calvin]"/>
 </p>
