Renamed 'URLs' to 'Links' where appropriate.

--- a/links/index.html
+++ b/links/index.html
@@ -8,7 +8,7 @@ This page contains the best links to interesting GIMP-sites:
 <!--#include virtual="/includes/urls_important.inc" -->
 
 
-<h2>Other Useful URLs</h2>
+<h2>Other Useful Links</h2>
 <ul>
     <li><a href="#maillists">Mailinglists</a></li>
     <li><a href="#org">The GIMP Organization</a></li>
