Modified ChangeLog. Removed the headers for the links in the bottom of the
Modified ChangeLog.
Removed the headers for the links in the bottom of the page and add them to the includes instead.
Fixed a typo.
Add developer.gimp.org to the list of important developer links.
Changed the header a little so it uses Links instead of URLs.
Added the menus to the files to make them work like the others.
Now using the new include files.
Added files wich are going to be used for the source howtos for now.

--- a/downloads/install_help.html
+++ b/downloads/install_help.html
@@ -17,7 +17,7 @@
 <a name="requirements"><h1>Requirements</h1></a>
 <h2>Main Requirements</h2>
 <p>
-  Well, it is neccesarry to have a C compiler and related tools to compile and install the source package. 
+  Well, it is necessary to have a C compiler and related tools to compile and install the source package. 
   For the most part, GCC is recommended, but alot of effort has gone into making 
   GIMP compile with as many compilers as possible.
 </p>
