Modified ChangeLog. Commented out "The GIMP Documentation". Commented out
Modified ChangeLog.
Commented out "The GIMP Documentation".
Commented out Validation link.
Add a link to os2files for "OS/2 Software".
Removed 2 characters that broke the files a little.

--- a/unix/man-gimp-remote-1.2.html
+++ b/unix/man-gimp-remote-1.2.html
@@ -5,7 +5,7 @@ DIV.section {margin-left:2cm}
 </STYLE>
 </HEAD><BODY>
 <H1>GIMP-REMOTE</H1>
-Section: GIMP Manual Pages (1)<BR>Updated: 8 August 2000<BR><A HREF="#index">Index</A>
+Section: GIMP Manual Pages (1)<BR>Updated: 8 August 2000<BR><A HREF="#index">Index</A>
 <HR>
 
 <A NAME="lbAB">&nbsp;</A>
