--- a/unix/man-gimprc.1.html
+++ b/unix/man-gimprc.1.html
@@ -5,7 +5,7 @@ DIV.section {margin-left:2cm}
 </STYLE>
 </head><body>
 <h1>GIMPRC</h1>
-Section: GIMP Manual Pages (5)<br>Updated: 14 Oct 2000<br><a HREF="#index">Index</a>
+Section: GIMP Manual Pages (5)<br>Updated: 14 Oct 2000<br><a HREF="#index">Index</a>
 <hr>
 
 <a NAME="lbAB">&nbsp;</a>
