--- a/unix/man-gimptool-1.2.html
+++ b/unix/man-gimptool-1.2.html
@@ -5,7 +5,7 @@ DIV.section {margin-left:2cm}
 </STYLE>
 </HEAD><BODY>
 <H1>GIMPTOOL</H1>
-Section: GIMP Manual Pages (1)<BR>Updated: 26 June 2001<BR><A HREF="#index">Index</A>
+Section: GIMP Manual Pages (1)<BR>Updated: 26 June 2001<BR><A HREF="#index">Index</A>
 <HR>
 
 <A NAME="lbAB">&nbsp;</A>
