fixes to make things validate

--- a/resources/palettes/index.html
+++ b/resources/palettes/index.html
@@ -1,5 +1,5 @@
 <!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
-<title>GIMP - Resources - Patterns</title>
+<title>GIMP - Resources - Palettes</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" --><!--This page rendered with mgo-patterns -->
 <h1>Resources - Palettes</h1>
