--- a/unix/man-gimp-1.2.html
+++ b/unix/man-gimp-1.2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <HTML><HEAD><TITLE>Manpage of GIMP</TITLE>
-<STYLE TYPES="text/css">
+<STYLE TYPE="text/css">
 DIV.section {margin-left:2cm}
 </STYLE>
 </HEAD><BODY>
