--- a/unix/man-gimprc.1.html
+++ b/unix/man-gimprc.1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Manpage of GIMPRC</title>
-<style TYPES="text/css">
+<style TYPE="text/css">
 DIV.section {margin-left:2cm}
 </STYLE>
 </head><body>
