--- a/unix/man-gtk-config.html
+++ b/unix/man-gtk-config.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><title>Manpage of GTK+</title>
-<style types="text/css">
+<style type="text/css">
 DIV.section {margin-left:2cm}
 </style></head>
 <body>
@@ -31,7 +31,7 @@ to the .m4 macros for GNU autoconf that are included with <i>GTK+</i>.
 
 
 <i>gtk-config</i> accepts the following options:
-<dl compact=""><dt><b>--version</b>
+<dl compact="true"><dt><b>--version</b>
 
 </dt><dd>
 Print the currently installed version of <i>GTK+</i> on the standard output.
