unix/gimprc.html use SSI to include the plain files.
2004-03-30  Sven Neumann  <sven@gimp.org>

	* unix/gimprc.html
	* unix/gtkrc.html: use SSI to include the plain files.

	* unix/gimprc: updated

	* admin/gimp-web-urls: link to the .html versions of gimprc and
	gtkrc.

--- a/unix/gtkrc.html
+++ b/unix/gtkrc.html
@@ -1,46 +1,7 @@
 <html>
 <body>
 <pre>
-# pixmap_path &quot;&lt;dir 1&gt;:&lt;dir 2&gt;:&lt;dir 3&gt;:...&quot;
-#
-# include &quot;rc-file&quot;
-#
-# style &lt;name&gt; [= &lt;name&gt;]
-# {
-#   &lt;option&gt;
-# }
-#
-# widget &lt;widget_set&gt;       style &lt;style_name&gt;
-# class  &lt;widget_class_set&gt; style &lt;style_name&gt;
-#
-# You can add your own GIMP-specific GTK styles here.
-
-
-#
-# Example keybinding to remap Help to F2
-#
-binding &quot;gimp-help-binding&quot;
-{
-  bind &quot;F2&quot;           { &quot;show-help&quot; (255)        }
-  bind &quot;KP_F2&quot;        { &quot;show-help&quot; (255)        }
-  bind &quot;&lt;shift&gt;F2&quot;    { &quot;show-help&quot; (whats-this) }
-  bind &quot;&lt;shift&gt;KP_F2&quot; { &quot;show-help&quot; (whats-this) }
-  bind &quot;&lt;ctrl&gt;F2&quot;     { &quot;show-help&quot; (tooltip)    }
-  bind &quot;&lt;ctrl&gt;KP_F2&quot;  { &quot;show-help&quot; (tooltip)    }
-}
-
-# class &quot;GtkWidget&quot; binding &quot;gimp-help-binding&quot;
-
-
-#
-# The dock separator DND highlight color is configurable.
-#
-style &quot;gimp-red-separator-style&quot;
-{
-  bg[SELECTED] = &quot;#aa2448&quot;
-}
-
-# widget &quot;*gimp-dock-separator*&quot; style &quot;gimp-red-separator-style&quot;
+<!--#include virtual="gtkrc" -->
 </pre>
 </body>
 </html>
