declare the html namespace.
2004-04-10  Sven Neumann  <sven@gimp.org>

	* nopatents.html: declare the html namespace.

--- a/nopatents.html
+++ b/nopatents.html
@@ -4,7 +4,7 @@
 <!-- design by Benjamin Henrion <bh_at_udev_dot_org> http://bh.udev.org -->
 <!-- gimp customization by Raphael Quinet -->
 
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <title>NO Software Patents in Europe</title>
 
