cross-link man-pages

--- a/man/gimp.html
+++ b/man/gimp.html
@@ -146,6 +146,5 @@ p.roffit {
 <p class="level0">With patches, fixes, plugins, extensions, scripts, translations, documentation, and more from lots  and lots of people all over the world. 
 <p class="level0">
 <p class="level0"><a name="SEE"></a><h2 class="nroffsh">SEE ALSO</h2>
-<p class="level0"><span Class="manpage">gimprc (5)</span> <span Class="manpage"> </span> <span Class="manpage">gimptool (1)</span> <span Class="manpage"> </span> <span Class="manpage">gimp-remote (1)</span> <p class="roffit">
- This HTML page was made with <a href="http://daniel.haxx.se/projects/roffit/">roffit</a>.
+<p class="level0"><span Class="manpage"><a href="gimprc.html">gimprc (5)</a></span> <span Class="manpage"> </span> <span Class="manpage"><a href="gimptool-2.0,html">gimptool-2.0 (1)</a></span> <span Class="manpage"> </span> <span Class="manpage"><a href="gimp-remote.html">gimp-remote (1)</a></span>
 </body></html>
