--- a/man/gimprc.html
+++ b/man/gimprc.html
@@ -366,6 +366,5 @@ p.roffit {
 <p class="level0"><span Class="emphasis">${prefix}/etc/gimp/2.0/gimprc</span> System-wide configuration file 
 <p class="level0"><span Class="emphasis">\fB$HOME\fP/.gimp-2.2/gimprc</span> Per-user configuration file 
 <p class="level0"><a name="SEE"></a><h2 class="nroffsh">SEE ALSO</h2>
-<p class="level0"><span Class="manpage">gimp (1)</span> <span Class="manpage">gimptool (1)</span> <span Class="manpage">gimp-remote (1)</span> <p class="roffit">
- This HTML page was made with <a href="http://daniel.haxx.se/projects/roffit/">roffit</a>.
+<p class="level0"><span Class="manpage"><a href="gimp.html">gimp (1)</a></span> <span Class="manpage"><a href="gimptool-2.0.html">gimptool-2.0 (1)</a></span> <span Class="manpage"><a href="gimp-remote.html">gimp-remote (1)</a></span>
 </body></html>
