--- a/man/gimptool-2.0.html
+++ b/man/gimptool-2.0.html
@@ -109,11 +109,9 @@ p.roffit {
 <p class="level0"><span Class="bold">PKG_CONFIG</span> to get the location of the pkg-config program used to determine details about your glib, pango and gtk+ installation. 
 <p class="level0">
 <p class="level0"><a name="SEE"></a><h2 class="nroffsh">SEE ALSO</h2>
-<p class="level0"><span Class="manpage">gimp (1)</span> <span Class="manpage"> </span> <span Class="manpage">gimprc (5)</span> <span Class="manpage">pkg-config (1)</span> 
+<p class="level0"><span Class="manpage"><a href="gimp.html">gimp (1)</a></span> <span Class="manpage"> </span> <span Class="manpage"><a href="gimprc.html">gimprc (5)</a></span> <span Class="manpage">pkg-config (1)</span> 
 <p class="level0">
 <p class="level0"><a name="AUTHORS"></a><h2 class="nroffsh">AUTHORS</h2>
 <p class="level0">gimptool was written by Manish Singh (yosh@gimp.org) and is based on gtk-config by Owen Taylor (owen@gtk.org). 
 <p class="level0">This man page was written by Ben Gertzfield (che@debian.org), and tweaked by Manish Singh (yosh@gimp.org), Adrian Likins (adrian@gimp.org) and Marc Lehmann (pcg@goof.com&gt;). 
-<p class="level0"><p class="roffit">
- This HTML page was made with <a href="http://daniel.haxx.se/projects/roffit/">roffit</a>.
 </body></html>
