--- a/man/gimp-remote.html
+++ b/man/gimp-remote.html
@@ -75,6 +75,5 @@ p.roffit {
 <p class="level0">Sven Neumann and Simon Budig. 
 <p class="level0">
 <p class="level0"><a name="SEE"></a><h2 class="nroffsh">SEE ALSO</h2>
-<p class="level0"><span Class="manpage">gimp (1)</span> <span Class="manpage"> </span> <span Class="manpage">gimprc (5)</span> <span Class="manpage"> </span> <span Class="manpage">gimptool (1)</span> <p class="roffit">
- This HTML page was made with <a href="http://daniel.haxx.se/projects/roffit/">roffit</a>.
+<p class="level0"><span Class="manpage"><a href="gimp.html">gimp (1)</a></span> <span Class="manpage"> </span> <span Class="manpage"><a href="gimprc.html">gimprc (5)</a></span> <span Class="manpage"> </span> <span Class="manpage"><a href="gimptool-2.0.html">gimptool-2.0 (1)</a></span>
 </body></html>
