fixed broken roffit output.
2004-12-18  Sven Neumann  <sven@gimp.org>

	* man/gimprc.html: fixed broken roffit output.

--- a/man/gimprc.html
+++ b/man/gimprc.html
@@ -50,7 +50,7 @@ p.roffit {
 <p class="level0">Comments are introduced by a hash sign (#), and continue until the end of the line.  Blank lines are ignored. 
 <p class="level0">The <span Class="bold">gimprc</span> file associates values with properties.  These properties may be set by lisp-like assignments of the form: 
 <p class="level0"><a name=""></a><span class="nroffip"></span> 
-<p class="level1">f3(f2property-name&nbsp;valuef3)f1 
+<p class="level1">(property-name&nbsp;value)
 <p class="level1">where: 
 <p class="level1"><span Class="emphasis">property-name</span> is one of the property names described below. 
 <p class="level1"><span Class="emphasis">value</span> is the value the property is to be set to. 
