man/gimp-remote.html fine-tuning.
2004-12-18  Sven Neumann  <sven@gimp.org>

	* man/gimp-remote.html
	* man/gimp.html: fine-tuning.

--- a/man/gimp.html
+++ b/man/gimp.html
@@ -139,7 +139,7 @@ p.roffit {
 <p class="level0"><a name="OTHER"></a><h2 class="nroffsh">OTHER INFO</h2>
 <p class="level0">The canonical place to find GIMP info is at <a href="http://www.gimp.org">http://www.gimp.org</a>/. Here you can find links to just about many other GIMP sites, tutorials, data sets, mailing list archives, and more. 
 <p class="level0">There is also a GIMP User Manual available at  <a href="http://manual.gimp.org">http://manual.gimp.org</a>/ that goes into much more detail  about the interactive use of GIMP. 
-<p class="level0">The latest version of GIMP and the GTK+ libs is always available at  ftp://ftp.gimp.org/. 
+<p class="level0">The latest version of GIMP and the GTK+ libs is always available at <a href="ftp://ftp.gimp.org/">ftp://ftp.gimp.org/</a>. 
 <p class="level0">
 <p class="level0"><a name="AUTHORS"></a><h2 class="nroffsh">AUTHORS</h2>
 <p class="level0">Spencer Kimball and Peter Mattis. 
