--- a/man/gimp-remote.html
+++ b/man/gimp-remote.html
@@ -64,8 +64,8 @@ p.roffit {
 <p class="level0">
 <p class="level0"><a name="EXAMPLES"></a><h2 class="nroffsh">EXAMPLES</h2>
 <p class="level0">
-<p class="level0"><span Class="bold">gimp-remote\ <a href="http://www.gimp.org/images/wilber_the_gimp.png">http://www.gimp.org/images/wilber_the_gimp.png</a></span> Loads the image from the GIMP website into a running GIMP or starts a new one. 
-<p class="level0"><span Class="bold">gimp-remote\ wilber.xcf\ wilma.xcf</span> Loads the local files wilber.xcf and wilma.xcf into a running GIMP or starts a new one.  
+<p class="level0"><span Class="bold">gimp-remote <a href="http://www.gimp.org/images/wilber_the_gimp.png">http://www.gimp.org/images/wilber_the_gimp.png</a></span> Loads the image from the GIMP website into a running GIMP or starts a new one. 
+<p class="level0"><span Class="bold">gimp-remote wilber.xcf wilma.xcf</span> Loads the local files wilber.xcf and wilma.xcf into a running GIMP or starts a new one.  
 <p class="level0">
 <p class="level0"><a name="ENVIRONMENT"></a><h2 class="nroffsh">ENVIRONMENT</h2>
 <p class="level0">
