some minor tweaks.
2004-12-19  Sven Neumann  <sven@gimp.org>

	* release-notes/gimp-2.2.html: some minor tweaks.

--- a/release-notes/gimp-2.2.html
+++ b/release-notes/gimp-2.2.html
@@ -1,14 +1,14 @@
 <!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
-<title>GIMP - The GIMP 2.2.0 Announcement</title>
+<title>GIMP - The GIMP 2.2 Release Notes</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<h1>The GIMP 2.2.0 Announcement</h1>
+<h1>The GIMP 2.2 Release Notes</h1>
 <p>
-  The GIMP developers are proud to release version 2.2 of the GNU Image
-  Manipulation Program. About nine months after version 2.0 hit the
-  road, we have completed another development cycle and can bring a new
-  stable GIMP to our users' desktops.
+  The GIMP developers are proud to release version 2.2 of the
+  <b>GNU Image Manipulation Program</b>. About nine months after
+  version 2.0 hit the road, we have completed another development
+  cycle and can bring a new stable GIMP to our users' desktops.
 </p>
 
 <h2>About The GIMP</h2>
@@ -29,17 +29,17 @@
   software, its capabilities are ultimately limited only by the
   collective imagination of the community of free software
   contributors. More information about the GIMP is available at
-  <a href="http://www.gimp.org">http://www.gimp.org</a>
+  <a href="http://www.gimp.org/">http://www.gimp.org/</a>.
 </p>
 
 <h2>Download</h2>
 <p>
-  The GIMP can be downloaded as source code from ftp.gimp.org or from 
-  one of the mirrors listed at http://gimp.org/download.html. We 
-  expect that binary packages for the different supported platforms 
-  and distributions will show up soon. Unless you are experienced with 
-  building software from source, you should wait until binary packages 
-  become available.
+  The GIMP can be downloaded as source code from ftp.gimp.org or from
+  one of the mirrors listed in the <a
+  href="/downloads">Downloads</a> section. We expect that binary
+  packages for the different supported platforms and distributions
+  will show up soon. Unless you are experienced with building software
+  from source, you should wait until binary packages become available.
 </p>
 
 <h2>Upgrading from GIMP 2.0</h2>
@@ -68,29 +68,28 @@
 </p>
 <p>
   gimp-help-2 is available from 
-  <a href="ftp://ftp.gimp.org/pub/gimp/help/testing/"> ftp://ftp.gimp.org/pub/gimp/help/testing/</a>. 
-  The manual can also be accessed online at <a href="http://docs.gimp.org/">http://docs.gimp.org</a>.
+  <a href="ftp://ftp.gimp.org/pub/gimp/help/testing/">ftp.gimp.org</a>. 
+  The manual can also be accessed online at
+  <a href="http://docs.gimp.org/">http://docs.gimp.org</a>.
 </p>
 
 <h2>Bugs</h2>
 <p>
-  Thanks to the pre-releases we did over the last month, this code has 
-  already seen quite some testing but a lot has changed since version 
-  GIMP 2.0 and we could very well have introduced new bugs. If you 
-  find any , make sure you report them at bugzilla.gnome.org (after 
+  Thanks to the pre-releases we did over the last month, this code has
+  already seen quite some testing but a lot has changed since version
+  GIMP 2.0 and we could very well have introduced new bugs. If you
+  find any , make sure you report them at <a
+  href="http://bugzilla.gnome.org">bugzilla.gnome.org</a> (after
   checking that it isn't reported already).
 </p>
 
 <h2>What's New in GIMP 2.2</h2>
 <p>
-  We have collected a list of changes and new features in the GIMP 
-  Wiki. Please have a look at 
-  <a href="http://wiki.gimp.org/gimp/WhatsNew2">http://wiki.gimp.org/gimp/WhatsNew2</a>.
-</p>
-<p>
-  For a detailed list of changes, please have a look at the NEWS file, 
-  which is contained in the tarball and available online at 
-  <a href="http://developer.gimp.org/NEWS">http://developer.gimp.org/NEWS</a>.
+  We have collected a list of changes and new features in the
+  <a href="http://wiki.gimp.org/gimp/WhatsNew2">GIMP Wiki</a>. For a
+  detailed list of changes, please have a look at the NEWS file, which
+  is contained in the tarball and available online at
+  <a href="http://developer.gimp.org/NEWS">developer.gimp.org</a>.
 </p>
 
 <h2>What's Next</h2>
@@ -108,7 +107,8 @@
   suggestions. GIMP 2.2 wouldn't exist without your help. Keep it coming!
 </p>
 <p>
-  Happy GIMPing, The GIMP developers
+  Happy GIMPing,<br/>
+  The GIMP developers
 </p>
 
 <!--#include virtual="/includes/wgo-page-fini.xhtml" -->
