--- a/release-notes/gimp-2.2.html
+++ b/release-notes/gimp-2.2.html
@@ -29,7 +29,7 @@
   software, its capabilities are ultimately limited only by the
   collective imagination of the community of free software
   contributors. More information about the GIMP is available at
-  <a href="http://www.gimp.org/">http://www.gimp.org/</a>.
+  <a href="http://www.gimp.org/">www.gimp.org</a>.
 </p>
 
 <h2>Download</h2>
@@ -70,7 +70,7 @@
   gimp-help-2 is available from 
   <a href="ftp://ftp.gimp.org/pub/gimp/help/testing/">ftp.gimp.org</a>. 
   The manual can also be accessed online at
-  <a href="http://docs.gimp.org/">http://docs.gimp.org</a>.
+  <a href="http://docs.gimp.org/">docs.gimp.org</a>.
 </p>
 
 <h2>Bugs</h2>
@@ -79,7 +79,7 @@
   already seen quite some testing but a lot has changed since version
   GIMP 2.0 and we could very well have introduced new bugs. If you
   find any , make sure you report them at <a
-  href="http://bugzilla.gnome.org">bugzilla.gnome.org</a> (after
+  href="http://bugzilla.gnome.org/">bugzilla.gnome.org</a> (after
   checking that it isn't reported already).
 </p>
 
