--- a/nopatents.html
+++ b/nopatents.html
@@ -113,35 +113,9 @@
     }
     b {color:black}
   </style>
+</head>
 
-<script language="JavaScript" type="text/javascript">
-function time() {
-    var today = new Date();
-    var deadline = new Date( 2005, 6, 6, 12, 0, 0);
-    var difdate = new Date(deadline.getTime() - today.getTime());
-    var seconds_left = parseInt(difdate.getTime() / 1000);
-    var minutes_left = parseInt(seconds_left / 60);
-    var hours_left = parseInt(minutes_left / 60);
-    var days_left = parseInt(hours_left / 24);
-//    var millisecs_left = difdate % 1000;
-//    if (millisecs_left < 10) { millisecs_left = "00" + millisecs_left; }
-//    else if (millisecs_left < 100) { millisecs_left = "0" + millisecs_left; }
-    seconds_left = seconds_left % 60;
-//    if (seconds_left < 10) { seconds_left = "0" + seconds_left; }
-    minutes_left = minutes_left % 60;
-//    if (minutes_left < 10) { minutes_left = "0" + minutes_left; }
-    hours_left = hours_left % 24;
-//    if (hours_left < 10) { hours_left = "0" + hours_left; }
-    document.getElementById("days-left").innerHTML = days_left;
-    document.getElementById("hours-left").innerHTML = hours_left;
-    document.getElementById("minutes-left").innerHTML = minutes_left;
-    document.getElementById("seconds-left").innerHTML = seconds_left;
-//    document.getElementById("millisecs-left").innerHTML = millisecs_left;
-    clocktime=setTimeout("time()", "100");
-}
-</script></head>
-
- <body onload="time()">
+ <body>
   <h1>STOP Software&nbsp;Patents!</h1>
   <div id="content">
    <p id="mainmsg">
@@ -178,16 +152,10 @@ function time() {
     European software sector.
    </p>
    <p>
-    On Wed the 6<sup>th</sup> of July, 
-    <span id="days-left" class="big">5</span> days and
-    <span id="hours-left" class="big">5</span>h
-    <span id="minutes-left" class="big">5</span>m
-    <span id="seconds-left" class="big">5</span>s
-    from now,
-    the European Parliament will have the last
-    chance to prevent this. To do so, 367 of the 732 members must
-    be <strong>present</strong> and
-    <strong>vote for the right amendments</strong>.
+    <strong>UPDATE</strong>: The European Parliament has rejected the
+    controversial directive today, the 6<sup>th</sup> of July (results
+    of the vote: 14 to 648).  This is the second-best option to having
+    the Buzek-Rocard-Duff amendments accepted.
    </p>
    </div>
   <p id="footer">
