--- a/nopatents.html
+++ b/nopatents.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html><head>
-  <meta content="text/html; charset=iso-8859-1">
+  <meta content="text/html; charset=utf-8">
   <!-- design by Benjamin Henrion <bh_at_udev_dot_org> http://bh.udev.org
        and Peter Gerwinski <peter_at_gerwinski_dot_de> http://www.peter.gerwinski.de
-       modified by Raphaël Quinet <raphael_at_gimp_dot_org> for http://www.gimp.org/ -->
+       modified by RaphaÃ«l Quinet <raphael_at_gimp_dot_org> for http://www.gimp.org/ -->
   <title>STOP Software Patents in the EU!</title>
   
   
