add a note about Fink and Macports no .gz tarballs anymore I'm told.
2007-07-11  Jakub Steiner <jimmac@ximian.com>

* downloads/Mac.xhtml: add a note about Fink and Macports
* downloads/source.xhtml: no .gz tarballs anymore I'm told.
* images/bullet.png:
* style/wgo.css: bigger line-height for paragraphs. Unordered
lists get an image. <code> is more like on a aterminal.


svn path=/branches/v2.4/; revision=1529

--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -13,3 +13,18 @@ disk.</p>
 <ul>
 <li><a href="http://prdownloads.sourceforge.net/gimp-app/Gimp-2.2.11.dmg?download">Download Gimp.app</a> &ndash; for Mac OS X 10.3 and above</li>
 </ul>
+
+<h3>Fink &amp; Macports</h3>
+
+<p>Another easy way to install GIMP and other great <a
+href="http://www.gnu.org/philosophy/free-sw.html">Free software</a> on your mac
+is downloading either <a href="http://fink.sf.net">Fink</a> or <a
+href="http://www.macports.org/">Macports</a>. The installers then allow you to
+choose from a large directory of packages. To install gimp using fink, you
+simply do <code>sudo apt-get install gimp</code> once you have Fink installed.
+Similarly on Macports you do <code>sudo port install gimp</code>.</p>
+
+<ul>
+<li><a href="http://macports.org">Download Macports</a>.</li>
+<li><a href="http://fink.sf.net">Download Fink</a>.</li>
+</ul>
