--- a/about/splash/stable.html
+++ b/about/splash/stable.html
@@ -15,7 +15,7 @@
 			);
 			//replace the thumbnails with a crop view
 			$(".splashes img").each(function () {
-				console.log("mangling thumbnail for " + this.id);
+				//console.log("mangling thumbnail for " + this.id);
 				var img = this.src;
 				this.src = "/images/spacer.png";
 				$(this).css({
@@ -31,8 +31,14 @@
 <h1>Stable Version Splash History</h1>
 
 <div class="splashes">
-<a href="images/gimp1_1_splash.png" rel="imagebox-splash" title="GIMP 1.0 Release.<br /> Author: JTL"><img  id="gimp1_1_splash" src="images/gimp1_1_splash.png" width="128" height="128" /></a>
-<a href="images/gimp_splash.1.11.png" rel="imagebox-splash" title="GIMP 1.2 Release.<br /> Author: tigert"><img  id="gimp_splash.1.11" src="images/gimp_splash.1.11.png" width="128" height="128" /></a>
+<a href="images/gimp1_1_splash.png" rel="imagebox-splash" title="GIMP 1.0 Release.<br /> Author: JTL"><img alt="#"  id="gimp1_1_splash" src="images/gimp1_1_splash.png" width="128" height="128" /></a>
+
+<a href="images/gimp_splash.1.11.png" rel="imagebox-splash" title="GIMP 1.2 Release.<br /> Author: tigert"><img alt="#"  id="gimp_splash.1.11" src="images/gimp_splash.1.11.png" width="128" height="128" /></a>
+
+<a href="images/gimp_splashpng.1.19.png" rel="imagebox-splash" title="GIMP 2.0 Release.<br /> Author: jimmac"><img alt="#"  id="gimp_splashpng.1.19" src="images/gimp_splashpng.1.19.png" width="128" height="128" /></a>
+
+<a href="images/gimp-splash-1.6.png" rel="imagebox-splash" title="GIMP 2.2 Release.<br /> Author: Bill Luhtala"><img alt="#"  id="gimp-splash-1.6" src="images/gimp-splash-1.6.png" width="128" height="128" /></a>
+
 </div>
 
 
