OSX screenshot. COurtesy of Axel Wernicke.
2007-07-23  Jakub Steiner <jimmac@ximian.com>

* screenshots/osx_aperture.jpg:
* screenshots/osx_aperture_thumb.jpg:
* screenshots/index.htrw: OSX screenshot. COurtesy of Axel Wernicke.

svn path=/branches/v2.4/; revision=1535

--- a/about/splash/stable.html
+++ b/about/splash/stable.html
@@ -17,10 +17,10 @@
 			$(".splashes img").each(function () {
 				//console.log("mangling thumbnail for " + this.id);
 				var img = this.src;
-				this.src = "/images/spacer.png";
-				$(this).css({
+				$(this).css({//real thumbnail when loaded
 					background:	"url('" + img + "') center no-repeat"
 				});
+				this.src = "/images/spacer.png";
 				$(this).parent().append(("<p>" + $(this).parent().attr("title"))+ "</p>\n");
 				$(".splashes a>p").corner("bottom 10px");
 			});
