--- a/about/splash/stable.html
+++ b/about/splash/stable.html
@@ -39,6 +39,8 @@
 
 <a href="images/gimp-splash-1.6.png" rel="imagebox-splash" title="GIMP 2.2 Release.<br /> Author: Bill Luhtala"><img alt="#"  id="gimp-splash-1.6" src="images/gimp-splash-1.6.png" width="128" height="128" /></a>
 
+<a href="images/gimp-splash-2.4.png" rel="imagebox-splash" title="GIMP 2.4 Release.<br /> Author: Paul Davey"><img alt="#"  id="gimp-splash-2.4" src="images/gimp-splash-2.4.png" width="128" height="128" /></a>
+
 </div>
 
 
