there is only one download page now. the page now validates. glory! (add
2007-07-24  Jakub Steiner <jimmac@ximian.com>

* includes/wgo-page-fini.xhtml?: there is only one  download page
now.
* about/splash/stable.html: the page now validates.
* team.htrw: glory! (add myself as the chief [re]designer for 2.4)

svn path=/branches/v2.4/; revision=1539

--- a/about/splash/stable.html
+++ b/about/splash/stable.html
@@ -6,11 +6,12 @@
 <script type="text/javascript" src="/includes/imagebox.js"></script>
 <script type="text/javascript">
 	//image preview
+	//<!--
 	$(document).ready(function() {
 			$.ImageBox.init(
 				{
 					loaderSRC: '/images/loading.gif',
-					closeHTML: '<img src="/images/close.png" />'
+					closeHTML: '<img src=\"/images/close.png\" alt=\"x\" />'
 				}
 			);
 			//replace the thumbnails with a crop view
@@ -25,6 +26,7 @@
 				$(".splashes a>p").corner("bottom 10px");
 			});
 	});
+	//-->
 </script>
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
