set appropriate background colors so IE6 doesn't look as bad.
2007-08-02  Jakub Steiner <jimmac@ximian.com>

* images/frontsplash24.png:
* images/title.png: set appropriate background colors so IE6
doesn't look as bad.

svn path=/branches/v2.4/; revision=1546

--- a/about/splash/stable.html
+++ b/about/splash/stable.html
@@ -33,15 +33,15 @@
 <h1>Stable Version Splash History</h1>
 
 <div class="splashes">
-<a href="images/gimp1_1_splash.png" rel="imagebox-splash" title="GIMP 1.0 Release.<br /> Author: Jens Lautenbacher"><img alt="#"  id="gimp1_1_splash" src="images/gimp1_1_splash.png" width="128" height="128" /></a>
+<a href="images/gimp1_1_splash.png" rel="imagebox-splash" title="GIMP 1.0<br /> Author: Jens Lautenbacher"><img alt="#"  id="gimp1_1_splash" src="images/gimp1_1_splash.png" width="128" height="128" /></a>
 
-<a href="images/gimp_splash.1.11.png" rel="imagebox-splash" title="GIMP 1.2 Release.<br /> Author: Tuomas Kuosmanen"><img alt="#"  id="gimp_splash.1.11" src="images/gimp_splash.1.11.png" width="128" height="128" /></a>
+<a href="images/gimp_splash.1.11.png" rel="imagebox-splash" title="GIMP 1.2<br /> Author: Tuomas Kuosmanen"><img alt="#"  id="gimp_splash.1.11" src="images/gimp_splash.1.11.png" width="128" height="128" /></a>
 
-<a href="images/gimp_splashpng.1.19.png" rel="imagebox-splash" title="GIMP 2.0 Release.<br /> Author: Jakub Steiner"><img alt="#"  id="gimp_splashpng.1.19" src="images/gimp_splashpng.1.19.png" width="128" height="128" /></a>
+<a href="images/gimp_splashpng.1.19.png" rel="imagebox-splash" title="GIMP 2.0<br /> Author: Jakub Steiner"><img alt="#"  id="gimp_splashpng.1.19" src="images/gimp_splashpng.1.19.png" width="128" height="128" /></a>
 
-<a href="images/gimp-splash-1.6.png" rel="imagebox-splash" title="GIMP 2.2 Release.<br /> Author: Bill Luhtala"><img alt="#"  id="gimp-splash-1.6" src="images/gimp-splash-1.6.png" width="128" height="128" /></a>
+<a href="images/gimp-splash-1.6.png" rel="imagebox-splash" title="GIMP 2.2<br /> Author: Bill Luhtala"><img alt="#"  id="gimp-splash-1.6" src="images/gimp-splash-1.6.png" width="128" height="128" /></a>
 
-<a href="images/gimp-splash-2.4.png" rel="imagebox-splash" title="GIMP 2.4 Release.<br /> Author: Paul Davey"><img alt="#"  id="gimp-splash-2.4" src="images/gimp-splash-2.4.png" width="128" height="128" /></a>
+<a href="images/gimp-splash-2.4.png" rel="imagebox-splash" title="GIMP 2.4<br /> Author: Paul Davey"><img alt="#"  id="gimp-splash-2.4" src="images/gimp-splash-2.4.png" width="128" height="128" /></a>
 
 </div>
 
