--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -1,7 +1,7 @@
-<h2>GIMP for Mac OS</h2>
+<h2>GIMP for Mac OS X</h2>
 
-<p>the GIMP team doesn't provide official Mac binaries. You can, however,
-install GIMP easily on the Mac using the <a
+<p>The GIMP team doesn't provide official Mac binaries. You can, however,
+install GIMP 2.2 easily on the Mac using the <a
 href="http://prdownloads.sourceforge.net/gimp-app/Gimp-2.2.11.dmg?download">universal
 binary</a> provided by the <a href="http://gimp-app.sourceforge.net/">gimp.app
 project</a>.</p>
