also point to the 2.4 Gimp.app for Intel.
2007-10-21  Sven Neumann  <sven@gimp.org>

	* downloads/Mac.xhtml: also point to the 2.4 Gimp.app for Intel.


svn path=/branches/v2.4/; revision=1649

--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -1,17 +1,16 @@
 <h2>GIMP for Mac OS X</h2>
 
 <p>The GIMP team doesn't provide official Mac binaries. You can, however,
-install GIMP 2.2 easily on the Mac using the <a
-href="http://prdownloads.sourceforge.net/gimp-app/Gimp-2.2.11.dmg?download">universal
-binary</a> provided by the <a href="http://gimp-app.sourceforge.net/">gimp.app
-project</a>.</p>
+install GIMP 2.4 easily on the Mac using the <a
+href="http://prdownloads.sourceforge.net/gimp-app/GIMP-2.4-rc3-intel.dmg">Intel binary</a> provided by the <a href="http://gimp-app.sourceforge.net/">gimp.app project</a>.</p>
 
 <p>Running GIMP on the Mac OS X requires Apple's X11 environment. It is
 included on the <em>"Optional Installs"</em> package on the OS X install
 disk.</p>
 
 <ul>
-<li><a href="http://prdownloads.sourceforge.net/gimp-app/Gimp-2.2.11.dmg?download">Download Gimp.app</a> &ndash; for Mac OS X 10.3 and above</li>
+<li><a href="http://prdownloads.sourceforge.net/gimp-app/Gimp-2.4-rc3-inter.dmg">Download Gimp.app 2.4</a> &ndash; Intel binary for Mac OS X 10.3 and above</li>
+<li><a href="http://prdownloads.sourceforge.net/gimp-app/Gimp-2.2.11.dmg">Download Gimp.app 2.2</a> &ndash; universal binary for Mac OS X 10.3 and above</li>
 </ul>
 
 <h3>Fink &amp; Macports</h3>
