get rid of white pixels on the windows screenshot.
2007-10-23  Jakub Steiner <jimmac@ximian.com>

* release-notes/images/2.4-refreshed-look.png: get rid of white
pixels on the windows screenshot.

svn path=/branches/v2.4/; revision=1659

--- a/downloads/mirrors.xhtml
+++ b/downloads/mirrors.xhtml
@@ -23,6 +23,9 @@
 <dd><a href="ftp://ftp.esat.net/mirrors/ftp.gimp.org/pub/gimp/">ftp://ftp.esat.net/mirrors/ftp.gimp.org/pub/gimp/</a></dd>
 <dd><a href="http://ftp.esat.net/mirrors/ftp.gimp.org/pub/gimp/">http://ftp.esat.net/mirrors/ftp.gimp.org/pub/gimp/</a> (web access)</dd>
 <dd><a href="rsync://ftp.esat.net/mirrors/ftp.gimp.org/pub">rsync://ftp.esat.net/mirrors/ftp.gimp.org/pub</a> (rsync access)</dd>
+<dd><a href="ftp://ftp.heanet.ie/mirrors/ftp.gimp.org/pub/gimp/gimp/">ftp://ftp.heanet.ie/mirrors/ftp.gimp.org/pub/gimp/gimp/</a></dd>
+<dd><a href="http://ftp.heanet.ie/mirrors/ftp.gimp.org/pub/gimp/gimp/">http://ftp.heanet.ie/mirrors/ftp.gimp.org/pub/gimp/gimp/</a> (web access)</dd>
+<dd><a href="rsync://ftp.heanet.ie/mirrors/ftp.gimp.org/pub/gimp/gimp/">rsync://ftp.heanet.ie/mirrors/ftp.gimp.org/pub/gimp/gimp/</a> (rsync access)</dd>
 <dt>Japan</dt>
 <dd><a href="ftp://SunSITE.sut.ac.jp/pub/archives/packages/gimp/">ftp://SunSITE.sut.ac.jp/pub/archives/packages/gimp/</a></dd>
 <dd><a href="ftp://ftp.u-aizu.ac.jp/pub/graphics/tools/gimp/">ftp://ftp.u-aizu.ac.jp/pub/graphics/tools/gimp/</a></dd>
@@ -31,8 +34,7 @@
 <dt>Korea</dt>
 <dd><a href="ftp://ftp.kreonet.re.kr/pub/tools/X11/ftp.gimp.org/">ftp://ftp.kreonet.re.kr/pub/tools/X11/ftp.gimp.org/</a></dd>
 <dt>Netherlands</dt>
-<dd><a href="ftp://gnu.kookel.org/pub/gimp/">ftp://gnu.kookel.org/pub/gimp/</a></dd>
-<dd><a href="http://gnu.kookel.org/ftp/gimp/">http://gnu.kookel.org/ftp/gimp/</a> (web access)</dd>
+<dd><a href="ftp://ftp.snt.utwente.nl/pub/software/gimp">ftp://ftp.snt.utwente.nl/pub/software/gimp</a></dd>
 <dt>Norway</dt>
 <dd><a href="ftp://sunsite.uio.no/pub/gimp/">ftp://sunsite.uio.no/pub/gimp/</a></dd>
 <dt>Poland</dt>
